# Claude

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 50a8da4260e8_add_users_table.py  6c10ca05ab63_create_items_table.py  78007abf573b_add_categories_table_and_item_category_.py
app/: auth.py  config.py  database.py  main.py  youtube.py
app/models/: __init__.py  category.py  item.py  member.py  show.py  song.py  user.py
app/routers/: auth.py  categories.py  items.py  members.py  pages.py  repertoire.py  shows.py  users.py
app/schemas/: __init__.py  category.py  item.py  member.py  show.py  song.py  user.py
app/static/css/: style.css
app/templates/: base.html  categories.html  category_form.html  home.html  item_form.html  items.html  login.html  members.html  register.html  repertoire.html  repertoire_detail.html  repertoire_suggest.html  show_detail.html  show_form.html  shows.html
docs/: blog-ui-prototype.md
tests/: conftest.py  test_auth.py  test_categories.py  test_items.py  test_members.py  test_pages.py  test_repertoire.py  test_shows.py
